feat(security): add brute-force login rate limiting and port scanner unit tests